--- a/css/style.css
+++ b/css/style.css
@@ -650,6 +650,7 @@ body {
   font-family: "Roboto", sans-serif;
   font-weight: 300;
   letter-spacing: 0.1em;
+  line-height: 1.2em;
 }
 
 .about__text span {
@@ -674,7 +675,7 @@ body {
 }
 
 .about__text-rus {
-  margin-top: 115px;
+  margin-top: 125px;
 }
 
 .about__text-eng {
@@ -684,7 +685,7 @@ body {
 .footer {
   position: relative;
   height: 50px;
-  margin-top: 100px;
+  margin-top: 150px;
   line-height: 40px;
 }
 
